# testactionsclangdll

./: .gitignore  Cargo.toml  LICENSE  Makefile.toml  deny.toml  export_presets.cfg  index.html  project.godot
.github/workflows/: ci.yaml
data/: simple_game.txt
es_data_parser/: Cargo.toml
es_data_parser/examples/: parse_file.rs  parse_file_by_block.rs
es_data_parser/src/: errors.rs  galaxy.rs  helpers.rs  lib.rs  planet.rs  ship.rs  start.rs  system.rs  types.rs
game/: Cargo.toml  Game.gd  Game.gdns  Game.tscn  Player.tscn  StellarObject.gd  StellarObject.gdns  StellarObject.tscn  lib_game.gdnlib
game/src/: game.rs  lib.rs  stellar_object.rs
game_data/: Cargo.toml
game_data/src/: lib.rs
helpers/: Cargo.toml
helpers/src/: lib.rs
images/: shuttle.png.import
menu/: Cargo.toml  MainMenu.gd  MainMenu.gdns  MainMenu.tscn  Star.gdns  Star.tscn  lib_menu.gdnlib
menu/src/: lib.rs  menu.rs  star.rs
