[package]
name = "game"
version = "0.1.0"
authors = ["François Mockers <mockersf@gmail.com>"]
edition = "2018"
publish = false
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
# gdnative = "0.7"
gdnative = { git = "https://github.com/GodotNativeTools/godot-rust" }
euclid = "0.20"
rand = "0.7.3"

helpers = { path = "../helpers" }
game_data = { path = "../game_data" }
